@@ -353,6 +353,9 @@ Trunk (unreleased changes)
     HADOOP-5824. Deprecate DataTransferProtocol.OP_READ_METADATA and remove
     the corresponding unused codes.  (Kan Zhang via szetszwo)
 
+    HADOOP-5721. Factor out EditLogFileInputStream and EditLogFileOutputStream
+    into independent classes. (Luca Telloli & Flavio Junqueira via shv)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
